# ceres-solver-rs

./: .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
.github/workflows/: test.yml
ceres-solver-src/: CHANGELOG.md  Cargo.toml  README.md  build.rs
ceres-solver-src/patches/: 0001-support-eigen-5.patch
ceres-solver-sys/: CHANGELOG.md  Cargo.toml  README.md  build.rs  wrapper.h
ceres-solver-sys/src/: lib.cpp  lib.h  lib.rs
src/: cost.rs  curve_fit.rs  error.rs  lib.rs  loss.rs  nlls_problem.rs  parameter_block.rs  parameters.rs  residual_block.rs  solver.rs  types.rs
