[package]
name = "ceres-solver"
version = "0.1.1"
edition = "2021"
readme = "README.md"
description = "Safe Rust bindings for the Ceres Solver"
repository = "https://github.com/light-curve/ceres-solver-rs"
license = "MIT OR Apache-2.0"
rust-version = "1.57.0"
exclude = [".github"]

[workspace]
members = [
    "ceres-solver-src",
    "ceres-solver-sys",
]

[features]
# No features means system, source overrides it
system = ["ceres-solver-sys/system"]
source = ["ceres-solver-sys/source"]
default = ["system"]

[dependencies.ceres-solver-sys]
version = "0.1.0"
path = "./ceres-solver-sys"

[dev-dependencies]
approx = "0.5"

[package.metadata.docs.rs]
features = ["source"]
