[package]
name = "ceres-solver-src"
version = "0.5.0+ceres2.2.0-eigen5.0.1-glog0.7.1"
edition = "2024"
links = "ceres"
readme = "README.md"
description = "Rust distribution of Ceres Solver built as a minimal static library"
repository = "https://github.com/light-curve/ceres-solver-rs"
license = "MIT OR Apache-2.0"
rust-version = "1.85.0"

[build-dependencies]
cmake = "0.1"
