[package]
name = "ceres-solver-sys"
version = "0.4.2"
edition = "2021"
readme = "README.md"
description = "Unsafe Rust bindings for the Ceres Solver"
repository = "https://github.com/light-curve/ceres-solver-rs"
license = "MIT OR Apache-2.0"
rust-version = "1.67.0"

[features]
system = ["pkg-config"]
# "source" overrides "system"
source = ["ceres-solver-src"]
default = ["system"]

[dependencies.ceres-solver-src]
version = "0.4.0"
path = "../ceres-solver-src"
optional = true

[dependencies.cxx]
version = "1,<=1.0.129"  # 1.0.130 requires MSRV 1.70
features = ["c++17"]

[build-dependencies]
cmake = "0.1"
cxx-build = "1, <=1.0.158"  # 1.0.130 requires MSRV 1.70
pkg-config = { version = "0.3", optional = true }

[dev-dependencies]
approx = "0.5"

[package.metadata.docs.rs]
features = ["source"]
