[package]
name = "ceres-solver-sys"
version = "0.5.0"
edition = "2024"
readme = "README.md"
description = "Unsafe Rust bindings for the Ceres Solver"
repository = "https://github.com/light-curve/ceres-solver-rs"
license = "MIT OR Apache-2.0"
rust-version = "1.85.0"

[features]
system = ["pkg-config"]
# "source" overrides "system"
source = ["ceres-solver-src"]
default = ["system"]

[dependencies.ceres-solver-src]
version = "0.5.0"
path = "../ceres-solver-src"
optional = true

[dependencies.cxx]
version = "1"
features = ["c++17"]

[build-dependencies]
cxx-build = "1"
pkg-config = { version = "0.3", optional = true }

[dev-dependencies]
approx = "0.5"

[package.metadata.docs.rs]
features = ["source"]
